--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
         </details>
         <details>
           <summary>Kaufland</summary>
-          <div class="qr">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-              <path d="M10,10 H90 V90 H10 Z" fill="#000" />
-            </svg>
-          </div>
+          <div class="qr" id="kaufland-qr"></div>
         </details>
         <details>
           <summary>Lidl</summary>
@@ -74,6 +70,10 @@
         </details>
       </section>
     </main>
+    <script src="qrious.min.js"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
     <script src="script.js"></script>
   </body>
 </html>
