Generic QR generation.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         <details>
           <summary>Kaufland</summary>
           <div class="qr" id="kaufland-qr"></div>
+          <script>
+            // Generate QR for Kaufland card
+            window.addEventListener('DOMContentLoaded', function() {
+              generateQR("KQR00001:203109971238", "kaufland-qr");
+            });
+          </script>
         </details>
         <details>
           <summary>Lidl</summary>
