--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
           <summary>Kaufland</summary>
           <div class="qr" id="kaufland-qr"></div>
           <script>
-            // Generate QR for Kaufland card
-            window.addEventListener('DOMContentLoaded', function() {
+            window.addEventListener("DOMContentLoaded", function () {
               generateQR("KQR00001:203109971238", "kaufland-qr");
             });
           </script>
