--- a/index.html
+++ b/index.html
@@ -35,12 +35,7 @@
         </details>
         <details>
           <summary>Kaufland</summary>
-          <div class="qr" id="kaufland-qr"></div>
-          <script>
-            window.addEventListener("DOMContentLoaded", function () {
-              generateQR("KQR00001:203109971238", "kaufland-qr");
-            });
-          </script>
+          <div class="qr" id="kaufland-qr" data-qr-content="KQR00001:203109971238"></div>
         </details>
         <details>
           <summary>Lidl</summary>
