--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
         </details>
         <details>
           <summary>Kaufland</summary>
-          <div class="qr" id="kaufland-qr" data-qr-content="KQR00001:203109971238"></div>
+          <div
+            class="qr"
+            id="kaufland-qr"
+            data-qr-content="KQR00001:203109971238"
+          ></div>
         </details>
         <details>
           <summary>Lidl</summary>
