--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         </details>
         <details>
           <summary>Kaufland</summary>
-          <div
-            class="qr"
-            data-qr-content="KQR00001:203109971238"
-          ></div>
+          <div class="qr" data-qr-content="KQR00001:203109971238"></div>
         </details>
         <details>
           <summary>Lidl</summary>
