--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       </section>
     </main>
     <script src="qrious.min.js"></script>
+    <script src="JsBarcode.all.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
