--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
         </details>
         <details>
           <summary>Billa</summary>
-          <div class="qr">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-              <circle cx="50" cy="50" r="50" fill="#000" />
-            </svg>
-          </div>
+          <div class="qr" data-barcode-content="000103366782"></div>
         </details>
         <details>
           <summary>Kaufland</summary>
