--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </svg>
           </div>
         </details>
-        <details>
+        <details open>
           <summary>Billa</summary>
           <div class="qr" data-barcode-content="000103366782"></div>
         </details>
@@ -44,24 +44,13 @@
         <details>
           <summary>Rossmann</summary>
           <div class="qr">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-              <line
-                x1="0"
-                y1="0"
-                x2="100"
-                y2="100"
-                stroke="#000"
-                stroke-width="10"
-              />
-              <line
-                x1="0"
-                y1="100"
-                x2="100"
-                y2="0"
-                stroke="#000"
-                stroke-width="10"
-              />
-            </svg>
+            <svg
+              class="barcode"
+              jsbarcode-format="upc"
+              jsbarcode-value="123456789012"
+              jsbarcode-textmargin="0"
+              jsbarcode-fontoptions="bold"
+            ></svg>
           </div>
         </details>
       </section>
