Add billa code.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
         </details>
         <details open>
           <summary>Billa</summary>
-          <div class="qr" data-barcode-content="000103366782"></div>
+          <div class="qr">
+            <svg
+              class="barcode"
+              jsbarcode-format="code128"
+              jsbarcode-value="000103366782"
+              jsbarcode-textmargin="0"
+              jsbarcode-fontoptions="bold"
+            ></svg>
+          </div>
         </details>
         <details>
           <summary>Kaufland</summary>
