--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
     <main>
       <section class="accordion">
         <details>
-          <summary>Tesco</summary>
-          <div class="qr">
-            <!-- Dummy QR Code (Replace with actual data) -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-              <rect width="100" height="100" fill="#000" />
-            </svg>
-          </div>
-        </details>
-        <details open>
           <summary>Billa</summary>
           <div class="qr">
             <svg
@@ -58,6 +49,15 @@
               jsbarcode-textmargin="0"
               jsbarcode-fontoptions="bold"
             ></svg>
+          </div>
+        </details>
+        <details>
+          <summary>Tesco</summary>
+          <div class="qr">
+            <!-- Dummy QR Code (Replace with actual data) -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+              <rect width="100" height="100" fill="#000" />
+            </svg>
           </div>
         </details>
       </section>
