--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
   </head>
   <body>
     <header>
-      <h1>Kartoj</h1>
-      <p class="subtitle">
-        zakaznické karty do různých obchodů, bez registrace
-      </p>
+      <h1>Kartoj – zákaznické karty do různých obchodů, bez registrace.</h1>
     </header>
-
     <main>
       <section class="accordion">
         <details>
