--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <header>
-      <h1>Kartoj – zákaznické karty do různých obchodů, bez registrace.</h1>
+      <h1>Kartoj</h1>
+      <p class="subtitle">
+        zákaznické karty do různých obchodů, bez registrace.
+      </p>
     </header>
     <main>
       <section class="accordion">
