--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <section class="accordion">
         <details>
-          <summary>Billa</summary>
+          <summary>Billa ✅</summary>
           <div class="qr">
             <svg
               class="barcode"
@@ -27,36 +27,25 @@
           </div>
         </details>
         <details>
-          <summary>Kaufland</summary>
+          <summary>Kaufland ✅</summary>
           <div class="qr" data-qr-content="KQR00001:203109971238"></div>
         </details>
         <details>
-          <summary>Lidl</summary>
+          <summary>Lidl ✅</summary>
+          <div class="qr" data-qr-content="772000081187172711"></div>
+        </details>
+        <details>
+          <summary>Rossmann ❌</summary>
           <div class="qr">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-              <rect x="20" y="20" width="60" height="60" fill="#000" />
-            </svg>
+            Prosím poslat na&nbsp;
+            <a href="mailto:kartoj@proton.me">kartoj@proton.me</a>
           </div>
         </details>
         <details>
-          <summary>Rossmann</summary>
+          <summary>Tesco ❌</summary>
           <div class="qr">
-            <svg
-              class="barcode"
-              jsbarcode-format="upc"
-              jsbarcode-value="123456789012"
-              jsbarcode-textmargin="0"
-              jsbarcode-fontoptions="bold"
-            ></svg>
-          </div>
-        </details>
-        <details>
-          <summary>Tesco</summary>
-          <div class="qr">
-            <!-- Dummy QR Code (Replace with actual data) -->
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-              <rect width="100" height="100" fill="#000" />
-            </svg>
+            Prosím poslat na&nbsp;
+            <a href="mailto:kartoj@proton.me">kartoj@proton.me</a>
           </div>
         </details>
       </section>
