--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           </div>
         </details>
       </section>
+      Jedna nefunguje? Pošlete prosím novou na
+
+      <a href="mailto:kartoj@proton.me">kartoj@proton.me</a>
     </main>
     <script src="qrious.min.js"></script>
     <script src="JsBarcode.all.min.js"></script>
