--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <div class="qr">
             <svg
               class="barcode"
-              jsbarcode-format="code128"
-              jsbarcode-value="000103366782"
+              jsbarcode-format="upc"
+              jsbarcode-value="400103367824"
               jsbarcode-textmargin="0"
             ></svg>
           </div>
