--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kartoj</title>
+    <title>kartoj - Zákaznické karty do různých obchodů, bez registrace.</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <h1>Kartoj</h1>
+      <h1>kartoj</h1>
       <p class="subtitle">
-        zákaznické karty do různých obchodů, bez registrace.
+        Zákaznické karty do různých obchodů, bez registrace.
       </p>
     </header>
     <main>
