Nebo máte další?

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </details>
       </section>
-      Jedna nefunguje? Pošlete prosím novou na
+      Jedna nefunguje? Nebo máte další? Pošlete prosím novou na
 
       <a href="mailto:kartoj@proton.me">kartoj@proton.me</a>
     </main>
